Prevent last row of brands letters to be hidden by first letter section

--- a/src/Creativestyle_BrandManagementExtension/web/css/_brands-index.scss
+++ b/src/Creativestyle_BrandManagementExtension/web/css/_brands-index.scss
@@ -69,11 +69,21 @@ $namespace: 'cs-';
             @include media('<laptop') {
                 padding-top: 10.5rem;
                 margin-top: -6.5rem;
+
+                &:first-child {
+                    padding-top: 4rem;
+                    margin-top: 0;
+                }
             }
 
             @include media('<tablet') {
                 padding-top: 7.5rem;
                 margin-top: -5.5rem;
+
+                &:first-child {
+                    padding-top: 2rem;
+                    margin-top: 0;
+                }
             }
 
             &:last-child {
